--- a/css/styles.css
+++ b/css/styles.css
@@ -11317,15 +11317,17 @@ section {
 }
 
 .app-badge {
-  height: 10rem;
+  height: 3rem;
 }
 
 #mainNav {
-  /* padding-top: 1rem;
-  padding-bottom: 1rem; */
-  background-color: #f79851;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: #fff;
 }
-
+#mainNav .navbar-brand {
+  font-family: "Kanit", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
 #mainNav .navbar-brand:hover, #mainNav .navbar-brand:active {
   color: #2937f0;
 }
@@ -11539,7 +11541,7 @@ footer a:hover, footer a:active, footer a:focus {
 }
 
 .masthead {
-  background-color: #fb8833;
+  background-color: #f8f9fa;
   padding-top: 9.5rem;
   padding-bottom: 5rem;
 }
